--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
             <span>PRO LANDSCAPING & FENCING</span>
         </div>
         <div class="right">
-            <a href="/">
+            <a href="index.html">
                 <span id="home">Home<span class="active">.</span></span>
             </a>
-            <a href="/services">
+            <a href="services.html">
                 <span id="services">Services<span>.</span></span>
             </a>
-            <a href="/testimonials">
+            <a href="testimonials.html">
                 <span id="testimonials">Testimonials<span>.</span></span>
             </a>
-            <a href="/contactus">
+            <a href="contactus.html">
                 <span id="contactus">Contact Us</span>
             </a>
         </div>
@@ -97,12 +97,12 @@
         </div>
         <div class="follow-us">
             <div class="container">
-                <img src="leaf.png" class="background-leaf">
+                <img src="leaffigma.png" class="background-leaf">
                 <div class="left-wrapper">
                     <h2>Follow us on<br>Social Media</h2>
                     <div class="icons-wrapper">
-                        <img src="ig.png" alt="" srcset="">
-                        <img src="fb.png" alt="" srcset="">
+                        <img src="Instagram.png" alt="" srcset="">
+                        <img src="Facebook.png" alt="" srcset="">
                     </div>
                 </div>
                 <button class="get-quote-button">Get a Quote</button>
