--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 
     <div class="quote-wrapper hidden">
         <form action="" method="post">
+            <h1>Get a Quote</h1>
             <input type="text" name="name" id="name" placeholder="Name" required>
             <input type="email" name="email" id="email" placeholder="Email" required>
             <input type="number" name="contact" id="contact" placeholder="Contact" required>
