--- a/services.html
+++ b/services.html
@@ -34,10 +34,10 @@
 
         <section id="services-top">
             <div class="servicetype">
-                <a href="/services.html" class="servicebutton">Landscaping</a>
-                <a href="/services.html?page=retaining-walls" class="servicebutton">Retaining Walls</a>
-                <a href="/services.html?page=fencing" class="servicebutton">Fencing</a>
-                <a href="/services.html?page=concreting" class="servicebutton">Concreting</a>
+                <a href="services.html" class="servicebutton">Landscaping</a>
+                <a href="services.html?page=retaining-walls" class="servicebutton">Retaining Walls</a>
+                <a href="services.html?page=fencing" class="servicebutton">Fencing</a>
+                <a href="services.html?page=concreting" class="servicebutton">Concreting</a>
             </div>
         </section>
 
