Fixed testimonials and alignment

--- a/testimonials.html
+++ b/testimonials.html
@@ -76,32 +76,60 @@
         <div class="grid-container">
             <div class="grid-text1"><p>What our <br>customers <br>say</p></div>
             <div class="grid-item">
-                <div class="video-text">Customer Review 1</div>
-                <video src="video1.mp4" controls></video>
+                <video src="video1.mp4" controls oncontextmenu="return false;"></video>
+                <div class="testimonial-wrapper">
+                    <img src="quote.png" alt="" srcset="">
+                    <div class="video-text">...really enjoyed working with the team, everyone was super supportive...</div>
+                    <img src="quote.png" alt="" srcset="">
+                </div>
             </div>
             <div class="grid-item">
-                <div class="video-text">Customer Review 2</div>
-                <video src="video1.mp4" controls></video>
+                <video src="video1.mp4" controls oncontextmenu="return false;"></video>
+                <div class="testimonial-wrapper">
+                    <img src="quote.png" alt="" srcset="">
+                    <div class="video-text">...really enjoyed working with the team, everyone was super supportive...</div>
+                    <img src="quote.png" alt="" srcset="">
+                </div>
             </div>
             <div class="grid-item">
-                <div class="video-text">Customer Review 3</div>
-                <video src="video1.mp4" controls></video>
+                <video src="video1.mp4" controls oncontextmenu="return false;"></video>
+                <div class="testimonial-wrapper">
+                    <img src="quote.png" alt="" srcset="">
+                    <div class="video-text">...really enjoyed working with the team, everyone was super supportive...</div>
+                    <img src="quote.png" alt="" srcset="">
+                </div>
             </div>
             <div class="grid-item">
-                <div class="video-text">Customer Review 4</div>
-                <video src="video1.mp4" controls></video>
+                <video src="video1.mp4" controls oncontextmenu="return false;"></video>
+                <div class="testimonial-wrapper">
+                    <img src="quote.png" alt="" srcset="">
+                    <div class="video-text">...really enjoyed working with the team, everyone was super supportive...</div>
+                    <img src="quote.png" alt="" srcset="">
+                </div>
             </div>
             <div class="grid-item">
-                <div class="video-text">Customer Review 5</div>
-                <video src="video1.mp4" controls></video>
+                <video src="video1.mp4" controls oncontextmenu="return false;"></video>
+                <div class="testimonial-wrapper">
+                    <img src="quote.png" alt="" srcset="">
+                    <div class="video-text">...really enjoyed working with the team, everyone was super supportive...</div>
+                    <img src="quote.png" alt="" srcset="">
+                </div>
             </div>
             <div class="grid-item">
-                <div class="video-text">Customer Review 6</div>
-                <video src="video1.mp4" controls></video>
+                <video src="video1.mp4" controls oncontextmenu="return false;"></video>
+                <div class="testimonial-wrapper">
+                    <img src="quote.png" alt="" srcset="">
+                    <div class="video-text">...really enjoyed working with the team, everyone was super supportive...</div>
+                    <img src="quote.png" alt="" srcset="">
+                </div>
             </div>
             <div class="grid-item">
-                <div class="video-text">Customer Review 7</div>
-                <video src="video1.mp4" controls></video>
+                <video src="video1.mp4" controls oncontextmenu="return false;"></video>
+                <div class="testimonial-wrapper">
+                    <img src="quote.png" alt="" srcset="">
+                    <div class="video-text">...really enjoyed working with the team, everyone was super supportive...</div>
+                    <img src="quote.png" alt="" srcset="">
+                </div>
             </div>
             <div class="grid-text2"><p>Watch more on <br> our social media</p></div>
         </div>
