--- a/footer.html
+++ b/footer.html
@@ -22,7 +22,7 @@
     </div>
     <div class="caption-4">
         <span>PRO LANDSCAPING AND FENCING</span>
-        <span>Contact Us</span>
+        <span>+61 430 431 634</span>
     </div>
 </div>
 </section>
