--- a/services.html
+++ b/services.html
@@ -46,19 +46,19 @@
                 <div class="grid-item item1">
                     <h3 id="content-1"></h3>
                 </div>
-                <div class="grid-item item2">
-                    <img src="landscaping1.png" alt="">
+                <div id="content-5"  class="grid-item item2">
+                    <img src="images/landscaping1.png" alt="">
                 </div>
             </div>
 
             <div class="grid-container1">
 
-                <div class="item3">
-                    <img src="landscaping2.png" alt="">
+                <div id="content-6" class="item3">
+                    <img src="images/landscaping2.png" alt="">
                 </div>
 
-                <div class="item4">
-                    <img src="landscaping3.png" alt="">
+                <div id="content-7" class="item4">
+                    <img src="images/landscaping3.png" alt="">
                 </div>
 
                 <div class="item5">
@@ -67,10 +67,7 @@
 
             </div>
 
-            <div class="item6">
-                <img src="landscaping4.png" alt="">
-            </div>
-
+           
             <div class="landscapingservices">
                 <h3 id="content-3"></h3>
                     <ul id="content-4">
@@ -79,17 +76,17 @@
             </div>
 
             <div class="landscaping-end">
-                <div class="item7">
-                    <img src="landscaping7.png" alt="">
+                <div id="content-9" class="item7">
+                    <img src="images/landscaping4.png" alt="">
                 </div>
-                <div class="item8">
-                    <img src="landscaping8.png" alt="">
+                <div id="content-10" class="item8">
+                    <img src="images/landscaping5.png" alt="">
                 </div>
-                <div class="item9">
-                    <img src="landscaping9.png" alt="">
+                <div id="content-11" class="item9">
+                    <img src="images/landscaping6.png" alt="">
                 </div>
-                <div class="item10">
-                    <img src="landscaping10.png" alt="">
+                <div id="content-12" class="item10">
+                    <img src="images/landscaping7.png" alt="">
                 </div>
             </div>
 
@@ -130,12 +127,35 @@
                 document.getElementById('content-2').innerHTML = "we ensure not only durability but also elegance and function seamlessly into your landscape design.";
                 document.getElementById('content-3').innerHTML = "Types of<br>retaining walls<br>we offer:"
                 document.getElementById('content-4').innerHTML = "<li>Concrete Sleepers </li> <li>Render Walls </li> <li>Versa Walls</li> <li>Stone Walls</li>"
+                document.getElementById('content-5').innerHTML = '<img src="images/Retaining1.png" alt="Retaining">';
+                document.getElementById('content-6').innerHTML = '<img src="images/Retaining2.png" alt="Retaining">';
+                document.getElementById('content-7').innerHTML = '<img src="images/Retaining3.png" alt="Retaining">';
+                document.getElementById('content-9').innerHTML = '<img src="images/Retaining4.png" alt="Retaining">';
+                document.getElementById('content-10').innerHTML = '<img src="images/Retaining5.png" alt="Retaining">';
+                document.getElementById('content-11').innerHTML = '<img src="images/Retaining6.png" alt="Retaining">';
+                document.getElementById('content-12').innerHTML = '<img src="images/Retaining7.png" alt="Retaining">';
+
             } else if (page === 'fencing') {
                 document.getElementById('content-1').innerHTML = "Fencing isn\’t just about boundaries; it defines spaces, ensures privacy, and enhances security. Our services include options from classic rustic wooden fences to modern, durable color bond designs.";
                 document.getElementById('content-2').innerHTML = "We create fences that not only complement the landscape but also provide peace of mind.";
+                document.getElementById('content-5').innerHTML = '<img src="images/Fencing1.png" alt="Fencing">';
+                document.getElementById('content-6').innerHTML = '<img src="images/Fencing2.png" alt="Fencing">';
+                document.getElementById('content-7').innerHTML = '<img src="images/Fencing3.png" alt="Fencing">';
+                document.getElementById('content-9').innerHTML = '<img src="images/Fencing4.png" alt="Fencing">';
+                document.getElementById('content-10').innerHTML = '<img src="images/Fencing5.png" alt="Fencing">';
+                document.getElementById('content-11').innerHTML = '<img src="images/Fencing6.png" alt="Fencing">';
+                document.getElementById('content-12').innerHTML = '<img src="images/Fencing7.png" alt="Fencing">';
             } else if (page === 'concreting') {
                 document.getElementById('content-1').innerHTML = "Concrete services lay the foundation for solid structures and enduring landscapes. From driveways to patios, our concrete services ensure quality craftsmanship and lasting durability.";
-                document.getElementById('content-2').innerHTML = "We deliver concrete solutions that are functional and beautiful, enhancing outdoor spaces.";                
+                document.getElementById('content-2').innerHTML = "We deliver concrete solutions that are functional and beautiful, enhancing outdoor spaces.";     
+                document.getElementById('content-5').innerHTML = '<img src="images/Concreting1.png" alt="Concreting">';
+                document.getElementById('content-6').innerHTML = '<img src="images/Concreting2.png" alt="Concreting">';
+                document.getElementById('content-7').innerHTML = '<img src="images/Concreting3.png" alt="Concreting">';
+                document.getElementById('content-9').innerHTML = '<img src="images/Concreting4.png" alt="Concreting">';
+                document.getElementById('content-10').innerHTML = '<img src="images/Concreting5.png" alt="Concreting">';
+                document.getElementById('content-11').innerHTML = '<img src="images/Concreting6.png" alt="Concreting">';
+                document.getElementById('content-12').innerHTML = '<img src="images/Concreting7.png" alt="Concreting">';
+           
             } else {
                 document.getElementById('content-1').innerHTML = "Landscaping transforms ordinary spaces into extraordinary places, where every tree, plant and stone is carefully chosen to evoke a specific mood or ambience.";
                 document.getElementById('content-2').innerHTML = "It's about blending elements like color, texture, and form to craft environments that inspire and rejuvenate.";
