--- a/testimonials.html
+++ b/testimonials.html
@@ -41,7 +41,7 @@
         </h2>
 
         <div class="item1">
-            <img src="testimonial1.png" alt="">
+            <img src="images/Testimonial1.png" alt="">
         </div>
 
         <p>Our dedicated team strives to deliver prompt, courteous, and <br> transparent communication, ensuring that
@@ -79,7 +79,7 @@
                 <video src="video1.mp4" controls oncontextmenu="return false;"></video>
                 <div class="testimonial-wrapper">
                     <img src="quote.png" alt="" srcset="">
-                    <div class="video-text">...really enjoyed working with the team, everyone was super supportive...</div>
+                    <div class="video-text">...Excellent service provided by Daman and his team. Great quality work and flexible to work with. Easy to make adjustments as required. I highly recommend their services....</div>
                     <img src="quote.png" alt="" srcset="">
                 </div>
             </div>
@@ -87,7 +87,8 @@
                 <video src="video1.mp4" controls oncontextmenu="return false;"></video>
                 <div class="testimonial-wrapper">
                     <img src="quote.png" alt="" srcset="">
-                    <div class="video-text">...really enjoyed working with the team, everyone was super supportive...</div>
+                    <div class="video-text">...The team at Pro Landscaping and Fencing did a great job on our front yard.  Delivered outstanding quality in their work, and were always professional with their communication.  Would recommend to anyone looking for a quality landscaping service.
+                        ...</div>
                     <img src="quote.png" alt="" srcset="">
                 </div>
             </div>
@@ -95,7 +96,7 @@
                 <video src="video1.mp4" controls oncontextmenu="return false;"></video>
                 <div class="testimonial-wrapper">
                     <img src="quote.png" alt="" srcset="">
-                    <div class="video-text">...really enjoyed working with the team, everyone was super supportive...</div>
+                    <div class="video-text">...Daman and team have done a great job with our front and back yard. They are really professional and have completed the job on time. Happy with the outcome...</div>
                     <img src="quote.png" alt="" srcset="">
                 </div>
             </div>
@@ -103,7 +104,8 @@
                 <video src="video1.mp4" controls oncontextmenu="return false;"></video>
                 <div class="testimonial-wrapper">
                     <img src="quote.png" alt="" srcset="">
-                    <div class="video-text">...really enjoyed working with the team, everyone was super supportive...</div>
+                    <div class="video-text">...We had done landscaping and fencing done by Pro Landscaping .Quality work and affordable prices.We are so happy with the results.Thank you guys for the beautiful job.
+                        Highly recommended...</div>
                     <img src="quote.png" alt="" srcset="">
                 </div>
             </div>
@@ -111,7 +113,7 @@
                 <video src="video1.mp4" controls oncontextmenu="return false;"></video>
                 <div class="testimonial-wrapper">
                     <img src="quote.png" alt="" srcset="">
-                    <div class="video-text">...really enjoyed working with the team, everyone was super supportive...</div>
+                    <div class="video-text">...Highly Recommend Daman and the team. They did Fencing and landscaping for us. Friendly people and quality work. Satisfied with overall outcome. Definitely will recommend to friends and family...</div>
                     <img src="quote.png" alt="" srcset="">
                 </div>
             </div>
@@ -119,7 +121,7 @@
                 <video src="video1.mp4" controls oncontextmenu="return false;"></video>
                 <div class="testimonial-wrapper">
                     <img src="quote.png" alt="" srcset="">
-                    <div class="video-text">...really enjoyed working with the team, everyone was super supportive...</div>
+                    <div class="video-text">...We recently had our fencing, concreting and landscaping done by Daman and his team. We highly recommend Pro Landscaping for anyone looking for top notch services. Their professionalism, quality of work and commitment to customer satisfaction truly set them apart...</div>
                     <img src="quote.png" alt="" srcset="">
                 </div>
             </div>
@@ -127,11 +129,14 @@
                 <video src="video1.mp4" controls oncontextmenu="return false;"></video>
                 <div class="testimonial-wrapper">
                     <img src="quote.png" alt="" srcset="">
-                    <div class="video-text">...really enjoyed working with the team, everyone was super supportive...</div>
+                    <div class="video-text">...Very professional and down to earth. The  retaining walls and gardening were done perfectly. I was very impressed with his work...</div>
                     <img src="quote.png" alt="" srcset="">
                 </div>
             </div>
-            <div class="grid-text2"><p>Watch more on <br> our social media</p></div>
+            <div class="grid-text2"><p>Watch more on <br> our social media</p>
+                <a href="https://www.facebook.com/prolandscapingandfencing/reviews">
+                    <button class="seemore-button">See More</button>
+                </a>
         </div>
         
         </div>
