--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
         </form>
     </div>
 
+    
 
     <script src="scripts.js"></script>
     <script>
@@ -138,6 +139,18 @@
                         });
                 });
         });
+    </script>
+
+    <div id="footer-placeholder"></div>
+    <script>        
+    document.addEventListener("DOMContentLoaded", function () {
+                // Load footer from footer.html
+                fetch('footer.html')
+                    .then(response => response.text())
+                    .then(data => {
+                        document.getElementById('footer-placeholder').innerHTML = data;
+                    });
+            });
     </script>
 </body>
 </html>
